--- a/app/views/devise/registrations/_form_basic.html.erb
+++ b/app/views/devise/registrations/_form_basic.html.erb
@@ -1,5 +1,5 @@
 <div class='ui form'>    
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html:{id: 'basic_form'})  do |f| %>
 
 <%= hidden_field_tag :plan, params[:plan] %>
 
@@ -94,7 +94,7 @@
         </div>
         <BR/>
         <div class="ui basic segment center aligned">
-          <%= f.submit "ENVIA" ,class: "ui submit button teal", style: "margin-top:20px;" %>
+          <%= f.submit "ENVIA" ,class: "ui submit button teal", id: 'submit_basic_form', style: "margin-top:20px;" %>
         </div>
 
 <% end %>
