--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -1,12 +1,13 @@
 <!-- Footer area -->
     <div class="container footer" style="background-color: teal;">
         <div class="ui container">
-            <div class="ui four column stackable doubling grid">
+            <div class="ui three column stackable doubling grid">
                 <div class="column">
                     <div class="ui header">SEGUEIX-NOS</div>
-                        <div class="plug icon">
-                            <a class="mbr-social-icons__icon socicon-bg-twitter" title="Twitter" target="_blank" href="https://twitter.com/hastag/milrevolts?src=hash"><i class="socicon socicon-twitter"></i></a>           
-                            <a class="mbr-social-icons__icon socicon-bg-facebook" title="Facebook" target="_blank" href="https://www.facebook.com/pages/milrevolts"><i class="socicon socicon-facebook"></i></a> 
+                        <div class="ui inline row">
+                            <a class="ui centered aligned label" title="Twitter MilRevolts hastag" target="_blank" href="https://twitter.com/search?f=tweets&vertical=default&q=milrevolts"><i class="ui twitter big red icon"></i></a>           
+                            <a class="ui label" title="Facebook MilRevolts page" target="_blank" href="https://www.facebook.com/pages/milrevolts"><i class="ui facebook big red icon"></i></a>
+                            <a class="ui label" title="Telegram MilRevolts Channel" target="_blank" href="https://t.me/milrevolts"><i class="ui telegram plane big red icon"></i></a>  
                         </div>
                 </div>
                 <div class="column">
@@ -45,3 +46,5 @@
 
         </div>
     </div>
+
+<script src="assets/javascripts/owl.carousel.js"></script>
