--- a/app/views/sortidas/20181117_Garrotxa.html.erb
+++ b/app/views/sortidas/20181117_Garrotxa.html.erb
@@ -25,7 +25,7 @@
 </p> 
 <h3 class="ui header teal">Observacions:</h3>
 <p>Depenent d’eventualitats i d’altres condicionants la ruta i les parades poden ser variades segons les circumstàncies i cercant el consens dels participants.
-<BR/>Hi han trams de camins asfalts.
+<BR/>No hi han trams de terra. Hi han trams de camins asfalts.
 </p>
 <p><BR/></p>
 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom">
