--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,10 @@
-<div class="ui basic segment center aligned">
-     <%= image_tag("MilRevolts400.png", :alt => "Mil Revolts", :class => "mbr-navbar__brand-img mbr-brand__img") %>
-     <BR/><BR/><BR/>  
-</div>
+<div><BR/><BR/></div>
 <div class="ui relaxed equal width grid">
   <div class="ui row">
     <div class="ui six wide column"></div>
       <div class="ui four wide column segment">
-
-
-
+     <div class='ui center aligned column'><%= image_tag("milrevoltslife_250h.png", :alt => "Mil Revolts", :class => "ui centered bordered image") %></div>
+     <div><BR/></div>
 <h2 class='ui center aligned dividing header teal'>
 <i class="user icon teal"></i>Edita el teu compte</h2>
 
