--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,12 @@
-<div class="ui basic segment center aligned">
-     <%= image_tag("MilRevolts400.png", :alt => "Mil Revolts", :class => "mbr-navbar__brand-img mbr-brand__img") %>
-     <BR/><BR/><BR/>  
-</div>
+<div><BR/><BR/></div>
 <div class="ui relaxed equal width grid">
   <div class="ui row">
     <div class="ui four wide column"></div>
-      <div class="ui six wide column segment">
-    
-
+      <div class="ui six wide column segment">  
+     <div class='ui center aligned column'><%= image_tag("milrevoltslife_250h.png", :alt => "Mil Revolts", :class => "ui centered bordered image") %></div>
+     <div><BR/></div>
       <h2 class="ui center aligned dividing header teal">
        <i class="signup icon teal"></i>Registra't, crea el teu compte.</h2>
-
        <div class="ui inverted segment">
         <% if (params[:plan].blank? || params[:plan] == '1') %>
     		<h3 class="ui center aligned header olive">
