--- a/app/views/pages/sortides.html.erb
+++ b/app/views/pages/sortides.html.erb
@@ -16,10 +16,24 @@
         <div><BR/><BR/></div>
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-             <a href=''>
-                <h3>Decembre del 2018.&nbsp;</h3>
+             <a href='20181215_Sud'>
+                <h3>Ds-15 i Dg-16 de Desembre del 2018.&nbsp;</h3>
              </a>
                 <h2 class="mbr-header__subtext">Cap de setmana als Parcs Naturals del Sud, dormint a Morella, 400+400kms.</h2>
+            </div>
+        </div>
+        <div><BR/><BR/></div>
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3>Dimecres 12 de Desembre del 2018.&nbsp;</h3>
+                <h2 class="mbr-header__subtext">Sortida a organitzar.</h2>
+            </div>
+        </div>
+        <div><BR/><BR/></div>
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3>Dimecres 5 de Desembre del 2018.&nbsp;</h3>
+                <h2 class="mbr-header__subtext">Sortida a organitzar.</h2>
             </div>
         </div>
         <div><BR/><BR/></div>
@@ -33,7 +47,7 @@
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
                 <h3>Dimecres 21 de Novembre del 2018.&nbsp;</h3>
-                <h2 class="mbr-header__subtext">Sortida a organitzar.</h2>
+                <h2 class="mbr-header__subtext">Volta a les Guilleries. Pantans de Sau i Susqueda.</h2>
             </div>
         </div>
         <div><BR/><BR/></div>
@@ -42,21 +56,14 @@
              <a href='20181117_Garrotxa'>
                 <h3>Dissabte 17 de Novembre del 2018.&nbsp;</h3>
              </a>
-                <h2 class="mbr-header__subtext">Sortida al Montseny, Garrotxa i Puigsacalm</h2>
+                <h2 class="mbr-header__subtext">Volta al Montseny, Garrotxa i Puigsacalm</h2>
             </div>
         </div>
         <div><BR/><BR/></div>
           <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
+              <a href='20181114_Montgrony'>
                 <h3>Dimecres 14 de Novembre del 2018.&nbsp;</h3>
-                <h2 class="mbr-header__subtext">Volta a les Guilleries. Pantans de Sau i Susqueda.</h2>
-            </div>
-        </div>
-        <div><BR/><BR/></div>
-          <div class="mbr-header mbr-header--wysiwyg row">
-            <div class="col-sm-8 col-sm-offset-2">
-              <a href='20181107_Montgrony'>
-                <h3>Dimecres 7 de Novembre del 2018.&nbsp;</h3>
                 <h2 class="mbr-header__subtext">Sortida al Santuari de Montgrony.</h2>
               </a>
             </div>
@@ -64,17 +71,14 @@
         <div><BR/><BR/></div>
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
-             <a href='20181031_VoltaGaia'>
-                <h3>Dimecres 31 d'Octubre del 2018.&nbsp;</h3>
+             <a href='20181107_VoltaGaia'>
+                <h3>Dimecres 7 de Novembre del 2018.&nbsp;</h3>
              </a>
                 <h2 class="mbr-header__subtext">Volta al Gaià.</h2>
             </div>
         </div>
         <div><BR/><BR/></div>
       
-        
-                
-
 
         <BR/><BR/>
         <div class='ui divider teal'></div>
