--- a/app/views/sortidas/20181107_VoltaGaia.html.erb
+++ b/app/views/sortidas/20181107_VoltaGaia.html.erb
@@ -4,24 +4,20 @@
 	<div class="eight wide column">
 <div><BR/><BR/></div>
 
-<h1 class="ui huge header teal" style='font-size:30pt;'>Sortida al Santuari de Montgrony.&nbsp;</h1>
+<h1 class="ui huge header teal" style='font-size:30pt;'>Sortida 'Volta al Gaià'.&nbsp;</h1>
 <h2 class="ui header teal">Dimecres 7 de Novembre del 2018</h2>
 <BR/>
 
 <h3 class="ui header teal">Ruta:</h3> 
-<p>BCN > Sant Celoni > Sant Hilari de Sacalm > Banyoles > Olot > Vidra > Ripoll > Moià > BCN
+<p>BCN > Molins > Torrelles > Avinyonet > La Llacuna > Querol > Sta. Mª Gaià > Vila-rodona > Bonastre > Albinyana > Juncosa > Montmell > Vila > BCN
 </p>
-<BR/>
 
 <h3 class="ui header teal">Punt de trobada:</h3> 
-<p>08:00 BCN Entença-Av.Roma/Mallorca
-<BR/>08:30 BCN Carretera Horta a Cerdanyola n.50
-<BR/>09:00 UAB Bellaterra Av Serragalliners (primera rotonda, només passar els Bombers)
-<BR/>09:30 Castellar del Vallès (Benzinera BP - Estació Servei Truyols) Tots amb el dipòsit ple.
+<p>	09:00 Mirador del Turó d'en Cort (Vallvidrera)
+<BR/>10:00 Avinyonet
 </p>
 <h3 class="ui header teal">Parades previstes i temps aprox.:</h3>
-<p>10:30-11:30 Lluçà (esmorzar)
-<BR/>14:00 Santuari Montgrony 
+<p>11:00 La Llacuna (esmorzar)
 </p>
 <h3 class="ui header teal">Inscripcions:</h3> 
 <p>Gratuïta i oberta a totes les motos que puguin seguir un ritme normal 'touring'.
@@ -34,11 +30,10 @@
 </p>
 <p><BR/></p>
 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom">
-<div><%= image_tag("rutes/Montgrony_20181107.jpg", :alt => "Sortida al Santuary de Montgrony 2018/10/31", :class => "mbr-figure__img") %></div>
+<div><%= image_tag("rutes/VoltaGaia_20181031.jpg", :alt => "Volta al Gaià 2018/10/31", :class => "mbr-figure__img") %></div>
 </figure>
 <BR/>
-<BR/>
-<h3 class="ui header blue">Més detalls pròximament per WhatsApp!</h3>
+
 <div><BR/><BR/></div>
 
 </div>
